--- a/Yeek/wwwroot/app.css
+++ b/Yeek/wwwroot/app.css
@@ -878,3 +878,18 @@ a.nametag[trust="Admin"] {
     color: red;
     font-weight: bold;
 }
+
+.pagination ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 6px;
+}
+
+.pagination li.ellipsis span {
+    display: block;
+    padding: 6px 12px;
+    background: var(--bg-secondary);
+    color: var(--fg-main);
+    border-radius: 6px;
+}
