--- a/Yeek/Components/Pages/Midi/Midi.razor
+++ b/Yeek/Components/Pages/Midi/Midi.razor
@@ -1,5 +1,6 @@
 ﻿@page "/{Guid:guid}"
 @using System.Text.Encodings.Web
+@using Yeek.FileHosting
 @using Yeek.FileHosting.Model
 @using Yeek.FileHosting.Repositories
 @using Yeek.Security.Model
@@ -124,14 +125,7 @@
         <audio controls>
             @foreach (var extension in _filePreview.SupportedExtensions)
             {
-                var type = extension switch
-                {
-                    ".webm" => "audio/webm; codecs=opus",
-                    ".m4a" => "audio/mp4; codecs=aac",
-                    ".mp3" => "audio/mpeg",
-                    ".ogg" => "audio/ogg; codecs=vorbis",
-                    _ => "audio"
-                };
+                var type = extension[1..].GetContentTypeForExtension();
                 <source src="/preview/@(_file.Id)/@extension[1..]" type="@type">
             }
             Your browser does not support the audio element.
