feat: Add download counts

--- a/Yeek/Components/Pages/Midi/Midi.razor
+++ b/Yeek/Components/Pages/Midi/Midi.razor
@@ -72,6 +72,7 @@
 <div class="midi-page-info">
     <p><strong>Author: </strong>@_file.MostRecentRevision.ArtistName</p>
     <p><strong>Album: </strong>@_file.MostRecentRevision.AlbumName</p>
+    <p><strong>Downloads: </strong>@_file.TotalDownloads</p>
     <div class="midi-page-ratings">
         @{
             var classList = "rating";
