feat: Add easy way to open own profile
fixes #4

--- a/Yeek/Components/Layout/MainLayout.razor
+++ b/Yeek/Components/Layout/MainLayout.razor
@@ -34,7 +34,7 @@
             else
             {
                 <div class="link">
-                    <p>Logged in as @User.DisplayName</p>
+                    <p>Logged in as <UserNametag User="User"/></p>
                 </div>
                 <div class="link">
                     <a href="/manage">Manage Account</a>
