Add text for where to upload

--- a/Yeek/Components/Layout/MainLayout.razor
+++ b/Yeek/Components/Layout/MainLayout.razor
@@ -28,7 +28,7 @@
             @if (User == null)
             {
                 <div class="link">
-                    <a href="/login">Login with SS14</a>
+                    <a href="/login">Login with SS14 for uploading</a>
                 </div>
             }
             else
