--- a/Yeek/Components/Layout/MainLayout.razor
+++ b/Yeek/Components/Layout/MainLayout.razor
@@ -45,6 +45,13 @@
                 <div class="link">
                     <a href="/logout">Logout?</a>
                 </div>
+                <div class="link">
+                    <a href="/notifications">Notifications</a>
+                    @if (User.Notifications!.Count > 0)
+                    {
+                        <span class="notification-bubble">@User.Notifications.Count</span>
+                    }
+                </div>
             }
         </div>
         <div class="link-array">
@@ -139,7 +146,7 @@
             {
                 <div class="notification">
                     <h4>@globalMessage.Header</h4>
-                    <p>@globalMessage.Content</p>
+                    <p class="respect-newlines">@globalMessage.Content</p>
                 </div>
             }
         </div>
@@ -203,7 +210,7 @@
         if (!userId.HasValue)
             return;
 
-        User = await UserRepository.GetUserAsync(userId.Value);
+        User = await UserRepository.GetUserAsync(userId.Value, getNotifs: true);
         if (User.TrustLevel == TrustLevel.Banned)
         {
             _banExpire = await ModerationRepository.GetLatestBanExpireOrNullForUserAsync(userId.Value);
