--- a/Yeek/Components/Pages/Midi/Midi.razor
+++ b/Yeek/Components/Pages/Midi/Midi.razor
@@ -10,8 +10,16 @@
 
 @if (_file == null || _uploadedBy == null)
 {
-    <p class="error-text">File not found.</p>
-    return;
+    @if (_fileDeletionReason != null)
+    {
+        <p class="error-text">File deleted: @_fileDeletionReason.Value.GetNotificationReason()</p>
+        return;
+    }
+    else
+    {
+        <p class="error-text">File not found.</p>
+        return;
+    }
 }
 
 @{
@@ -110,7 +118,7 @@
         }
     </div>
 
-    <p class="midi-page-description">
+    <p class="midi-page-description respect-newlines">
         @_file.MostRecentRevision.Description
     </p>
     <p class="midi-page-uploaded-by">
@@ -144,6 +152,10 @@
 <a href="/@_file.Id/edit">Edit</a>
 <a href="/@_file.Id/history">History</a>
 <a class="report-button" href="/moderation/report/new?topic=midi-@HtmlEncoder.Default.Encode($"{_file.Id}-rev-{_file.MostRecentRevision.RevisionId}")" target="_blank">Report content</a>
+@if (User is { TrustLevel: >= TrustLevel.Moderator })
+{
+    <a href="/moderation/takedown/new?item=@_file.Id">MOD: Delete Content</a>
+}
 
 <script defer>
     const fileId = "@_file.Id";
@@ -249,6 +261,7 @@
     private bool _hasArtist = true;
     private bool _hasDescription = true;
     private bool _hasAlbum = true;
+    private DeletionReason? _fileDeletionReason;
 
     protected override async Task OnParametersSetAsync()
     {
@@ -258,6 +271,10 @@
             HttpContext.HttpContext!.Response.StatusCode = 404;
             return;
         }
+
+        _fileDeletionReason = await FileRepository.GetDeletionStatusAsync(Guid);
+        if (_fileDeletionReason != null)
+            return;
 
         _file = await FileRepository.GetUploadedFileAsync(Guid);
         _filePreview = await FileRepository.GetFilePreviewOrNullAsync(Guid);
